--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
+FNE(完整版).exe
+ffmpeg.exe
 # Test binary, built with `go test -c`
 *.test
 
